--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
     "swiper": "^8.4.6",
@@ -46,6 +47,3 @@
     "tailwindcss": "^3.2.4"
   }
 }
-
-
-
